<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_margin="12dp"
    app:cardElevation="12dp"
    app:cardPreventCornerOverlap="false"
    app:shapeAppearanceOverlay="@style/ShapeAppearance.Card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/label_user_id"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/post_userid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="post_userid" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:text="@string/label_id"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/post_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="postId" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="post_title" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_body"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/post_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout3"
                android:text="post_body" />
        </LinearLayout>

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>



